syntax = "proto3";
package configset.proto;

// ConfigSet contains a configuration set.
message ConfigSet {
  // Configurations contains the controller configurations.
  map<string, ControllerConfig> configurations = 1;
}

// ControllerConfig contains a controller configuration.
message ControllerConfig {
  // Id is the config ID.
  string id = 1;
  // Revision is the revision number of the configuration.
  uint64 revision = 2;
  // Config is the configuration object.
  // Supports: protobuf and json (must start with {).
  bytes config = 3;
}
