syntax = "proto3";
package controller.exec;

import "github.com/aperturerobotics/controllerbus/controller/controller.proto";
import "github.com/aperturerobotics/controllerbus/controller/configset/proto/configset.proto";

// ControllerStatus holds basic status for a controller.
enum ControllerStatus {
  // ControllerStatus_UNKNOWN is unrecognized.
  ControllerStatus_UNKNOWN = 0;
  // ControllerStatus_CONFIGURING indicates the controller is configuring.
  ControllerStatus_CONFIGURING = 1;
  // ControllerStatus_RUNNING indicates the controller is running.
  ControllerStatus_RUNNING = 2;
  // ControllerStatus_ERROR indicates the controller is terminated with an error.
  ControllerStatus_ERROR = 3;
}

// ExecControllerRequest is a protobuf request to execute a controller.
message ExecControllerRequest {
  // ConfigSet is the controller config set to execute.
  configset.proto.ConfigSet config_set = 1;
  // ConfigSetYaml is optionally the YAML form of config_set to parse.
  // Merged with config_set.
  string config_set_yaml = 2;
  // ConfigSetYamlOverwrite sets if the yaml portion overwrites the proto portion.
  bool config_set_yaml_overwrite = 3;
}

// ExecControllerResponse is a protobuf response stream.
message ExecControllerResponse {
  // Id is the configset identifier for this status report.
  string id = 1;
  // Status is the controller execution status.
  ControllerStatus status = 2;
  // ControllerInfo may contain the running controller info.
  controller.Info controller_info = 3;
  // ErrorInfo may contain the error information.
  string error_info = 4;
}